--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 	<link rel="stylesheet" href="css/setup.css">
 	<link rel="stylesheet" href="css/general.css">
 	<link rel="stylesheet" href="css/window.css">
-	<link rel="stylesheet" href="css/start_screen.css">
 	<link rel="stylesheet" href="css/panels.css">
 	<link rel="stylesheet" href="css/dialogs.css">
+	<link rel="stylesheet" href="css/colors.css">
 	<style type="text/css" id="theme_css"></style>
 </head>
 <body spellcheck="false">
 	<script>
 		if (typeof module === 'object') {window.module = module; module = undefined;}//jQuery Fix
 		const isApp = typeof require !== 'undefined';
-		const appVersion = '4.3.1';
+		const appVersion = '4.2.5';
 
 		
 		if (localStorage.getItem('theme')) {
@@ -88,7 +88,6 @@
 		<script src="js/modes.js"></script>
 		<script src="js/api.js"></script>
 		<script src="js/file_system.js"></script>
-		<script src="js/interface/vue_components.js"></script>
 		<script src="js/interface/panels.js"></script>
 		<script src="js/interface/interface.js"></script>
 		<script src="js/interface/start_screen.js"></script>
@@ -108,6 +107,7 @@
 			}
 		</script>
 
+		<script src="js/materials.js"></script>	
 		<script src="js/edit_sessions.js"></script>
 		<script src="js/outliner/outliner.js"></script>
 		<script src="js/outliner/group.js"></script>
@@ -132,14 +132,12 @@
 		<script src="js/animations/timeline_animators.js"></script>
 		<script src="js/animations/keyframe.js"></script>
 		<script src="js/animations/timeline.js"></script>
-		<script src="js/preview/preview_scenes.js"></script>
 		<script src="js/plugin_loader.js"></script>
-
+		
 		<script src="js/io/codec.js"></script>
 		<script src="js/io/format.js"></script>
 		<script src="js/io/project.js"></script>
 		<script src="js/io/io.js"></script>
-		<script src="js/io/formats/generic.js"></script>
 		<script src="js/io/formats/bbmodel.js"></script>
 		<script src="js/io/formats/java_block.js"></script>
 		<script src="js/io/formats/bedrock.js"></script>
@@ -368,10 +366,7 @@
 			<li onclick="currentwindow.isMaximized() ? currentwindow.unmaximize() : currentwindow.maximize()"><i class="material-icons">crop_square</i><!--🗖--></li>
 			<li class="wwm_r" onclick="currentwindow.close()"><i class="material-icons">clear</i></li>
 		</ul>
-		<button id="web_download_button" hidden><a href="https://blockbench.net/downloads">
-			<span class="tl">web.download_app</span>
-			<i class="material-icons">system_update</i>
-		</a></button>
+		<button id="web_download_button" hidden><a class="tl" href="https://blockbench.net/downloads">web.download_app</a></button>
 	</header>
 	
 
@@ -391,7 +386,7 @@
 						move_back:  (drag_position_index !== null && index > drag_target_index && drag_position_index >= index),
 						move_forth: (drag_position_index !== null && index < drag_target_index && drag_position_index <= index)
 					}"
-					:title="project.name || project.geometry_name || ''"
+					:title="project.name || project.geometry_name"
 					@dblclick="project.openSettings()"
 					@mousedown="mouseDown(project, $event)"
 					@mouseup="mouseUp(project, $event)"
@@ -468,5 +463,6 @@
 			document.getElementById('loading_error_message').innerHTML = 'No loading errors...'
 		}
 	</script>
+	<script src="orevillestudios/vscode_hook.js"></script>
 </body>
 </html>
