--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="css/start_screen.css">
 	<link rel="stylesheet" href="css/panels.css">
 	<link rel="stylesheet" href="css/dialogs.css">
+	<link rel="stylesheet" href="css/colors.css">
 	<style type="text/css" id="theme_css"></style>
 </head>
 <body spellcheck="false">
@@ -108,6 +109,7 @@
 			}
 		</script>
 
+		<script src="js/materials.js"></script>	
 		<script src="js/edit_sessions.js"></script>
 		<script src="js/outliner/outliner.js"></script>
 		<script src="js/outliner/group.js"></script>
@@ -134,7 +136,7 @@
 		<script src="js/animations/timeline.js"></script>
 		<script src="js/preview/preview_scenes.js"></script>
 		<script src="js/plugin_loader.js"></script>
-
+		
 		<script src="js/io/codec.js"></script>
 		<script src="js/io/format.js"></script>
 		<script src="js/io/project.js"></script>
@@ -468,5 +470,6 @@
 			document.getElementById('loading_error_message').innerHTML = 'No loading errors...'
 		}
 	</script>
+	<script src="orevillestudios/vscode_hook.js"></script>
 </body>
 </html>
